examples/invalid/syntax.juni
enum Hello {
  X, Y, Z
}

fn main :: x =>
  match Some 1 {
    ::Some x => x
    ::None => 2
  }
